Add input data transportation

--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -12,17 +12,11 @@
       <h1>Input Data Driver</h1>
       <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
       <a href="/tarif" class="waves-effect waves-light btn">Data Tarif</a>
+      <a href="/transportasi" class="waves-effect waves-light btn"
+        >Data Transportasi</a
+      >
       <br /><br /><br />
-      <!-- <div class="input-field col s12">
-        <div class="col s4">
-          <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
-          </select>
-          <label>Pilih Jasa Penyedia</label>
-        </div>  
-        </div> -->
+      
       <!-- <h3>Data Tarif</h3> -->
       <table>
         <thead>
