--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,10 @@
       <h1>Selamat datang, <%= title %></h1>
       <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
       <a href="/tarif" class="waves-effect waves-light btn">Data Tarif</a>
+      <a href="/transportasi" class="waves-effect waves-light btn"
+        >Data Transportasi</a
+      >
+
       <h5>TEST</h5>
     </div>
   </body>
