--- a/views/transportasi.ejs
+++ b/views/transportasi.ejs
@@ -44,13 +44,7 @@
             <td><%= data_perus[i].nama %></td>
             <td style="width: 20%"><%= data_trans[i].deskripsi %></td>
             <td>                
-                <!-- <form action="/transportasi?_method=delete" method="POST">
-                    <input type="hidden" name="id" value="<%= data_trans[i].id %>">
-                    <input type="submit" class="btn btn-primary" 
-                    onclick="setId(<%= JSON.stringify(data_trans[i]) %>)" name="delete" id="delete_trans" value="delete">
-                </form> -->
-                <!-- <button class="waves-effect waves-light btn">Delete</button> -->
-                <input type="submit" name="id_transportasi" class="waves-effect waves-light btn" value="Delete">
+                <a href="/transportasi/hapus/<%= data_trans[i].id_transportasi %>" class="waves-effect waves-light btn">Delete</a>
             </td>
           </tr>
           <% } %>
