--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div class="container">
-      <h1>Selamat datang, <%= title %></h1>
-      <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
-      <a href="/tarif" class="waves-effect waves-light btn">Data Tarif</a>
-      <a href="/transportasi" class="waves-effect waves-light btn"
-        >Data Transportasi</a
-      >
-
-      <h5>TEST</h5>
+      <div style="text-align: center">
+        <h3 style="margin-top: 20%">Selamat Datang, di <%= title %></h3>
+        <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
+        <a href="/tarif" class="waves-effect waves-light btn">Data Tarif</a>
+        <a href="/transportasi" class="waves-effect waves-light btn"
+          >Data Transportasi</a
+        >
+      </div>
     </div>
   </body>
 </html>
