--- a/views/tarif.ejs
+++ b/views/tarif.ejs
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -9,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Input Data <%= title %></h1>
+      <h3>Input Data <%= title %></h3>
+      <a href="/index" class="waves-effect waves-light btn right" style="width: 8%"><i class="material-icons">home</i></a>
       <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
       <a href="/tarif" class="waves-effect waves-light btn">Data Tarif</a>
       <a href="/transportasi" class="waves-effect waves-light btn"
@@ -20,7 +22,8 @@
       <table>
         <thead>
           <tr>
-            <th>ID</th>
+            <th>No</th>
+            <!-- <th>ID</th> -->
             <th>Lokasi Awal</th>
             <th>Lokasi Tujuan</th>
             <th>Jarak</th>
@@ -33,7 +36,8 @@
         <tbody>
           <% for(var i=0;i<data_tarif.length;i++) { %>
           <tr>
-            <td><%= data_tarif[i].id_data_tarif %></td>
+            <td><%= [i+1] %></td>
+            <!-- <td><%= data_tarif[i].id_data_tarif %></td> -->
             <td><%= data_tarif[i].lokasi_awal %></td>
             <td><%= data_tarif[i].lokasi_tujuan %></td>
             <td><%= data_tarif[i].jarak %></td>
