--- a/views/transportasi.ejs
+++ b/views/transportasi.ejs
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -9,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Input Data <%= title %></h1>
+      <h3>Input Data <%= title %></h3>
+      <a href="/index" class="waves-effect waves-light btn right" style="width: 8%"><i class="material-icons">home</i></a>
       <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
       <a href="/tarif" class="waves-effect waves-light btn">Data Tarif</a>
       <a href="/transportasi" class="waves-effect waves-light btn"
