Fix data json ouput for android

--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -42,7 +42,7 @@
             <td><%= data_driver[i].usia %></td>
             <td><%= data_driver[i].rating_driver %></td>
             <td><%= data_driver[i].plat_nomor %></td>
-            <td><%= data_driver[i].id_transportasi %></td>
+            <td><%= data_driver[i].nama_transportasi %></td>
             <td>
               <a href="/driver/hapus/<%= data_driver[i].id_data_driver %>" class="waves-effect waves-light btn">Delete</a>
             </td>
