fix ejs tarif nama_transportasi

--- a/views/tarif.ejs
+++ b/views/tarif.ejs
@@ -43,7 +43,7 @@
             <td><%= data_tarif[i].jarak %></td>
             <td><%= data_tarif[i].tarif_tunai %></td>
             <td><%= data_tarif[i].tarif_nontunai %></td>
-            <td><%= data_tarif[i].id_transportasi %></td>
+            <td><%= data_tarif[i].nama_transportasi %></td>
             <td>                
               <a href="/tarif/hapus/<%= data_tarif[i].id_data_tarif %>" class="waves-effect waves-light btn">Delete</a>
             </td>
