--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="top">
       <h3>Input Data Driver</h3>
       <a href="/index" class="waves-effect waves-light btn right" style="width: 8%"><i class="material-icons">home</i></a>
       <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
@@ -56,8 +56,9 @@
 
       <a class="waves-effect waves-light btn modal-trigger" href="#modal1"
         >Tambah</a
-      ><br><br>
-
+      >
+      <a href="#top" class="waves-effect waves-light btn right"><i class="material-icons">expand_less</i></a>
+      <br><br>
       <!-- Modal Structure -->
       <div id="modal1" class="modal" style="width: 30%">
         <div class="modal-content">
