--- a/views/tarif.ejs
+++ b/views/tarif.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="top">
       <h3>Input Data <%= title %></h3>
       <a href="/index" class="waves-effect waves-light btn right" style="width: 8%"><i class="material-icons">home</i></a>
       <a href="/driver" class="waves-effect waves-light btn">Data Driver</a>
@@ -54,7 +54,10 @@
       <br />
       <a class="waves-effect waves-light btn modal-trigger" href="#modal2"
       >Tambah</a
-    >      <!-- Modal Structure -->
+    >  
+    <a href="#top" class="waves-effect waves-light btn right"><i class="material-icons">expand_less</i></a>
+<br><br>
+    <!-- Modal Structure -->
       <div id="modal2" class="modal" style="width: 30%">
           <div class="modal-content">
             <h4>Tambah Data <%= title %></h4>
